[gd_scene load_steps=4 format=3 uid="uid://qe0o7vwvwhmh"]

[ext_resource type="Texture2D" uid="uid://obxnlhj4i5au" path="res://images/fichaamarilla.png" id="1"]
[ext_resource type="Script" path="res://scenes/PlayerOptions.gd" id="2"]
[ext_resource type="Theme" uid="uid://bvi01pkikc5q4" path="res://themes/FreshmanMiddle.tres" id="3"]

[node name="PlayerOptions" type="Control"]
custom_minimum_size = Vector2(500, 66)
layout_mode = 3
anchors_preset = 0
offset_right = 648.0
offset_bottom = 66.0
theme = ExtResource("3")
script = ExtResource("2")
playername = ""

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 233.0
offset_bottom = 64.0

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1")
stretch_mode = 1

[node name="PlayerName" type="TextEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Yellowy"
placeholder_text = "User name"

[node name="Plays" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Plays?"

[node name="IA" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
button_pressed = true
text = "IA?"

[connection signal="text_changed" from="HBoxContainer/PlayerName" to="." method="_on_PlayerName_text_changed"]
[connection signal="toggled" from="HBoxContainer/Plays" to="." method="_on_Plays_toggled"]
[connection signal="toggled" from="HBoxContainer/IA" to="." method="_on_IA_toggled"]
